syntax = "proto3";
package indexpb;

import "indexrpcpb.proto";
import "eraftpb.proto";

service Index {
    rpc Raft (eraftpb.Message) returns (indexrpcpb.RaftDone) {
    }
    rpc RaftConfChange (indexrpcpb.ConfChangeReq) returns (indexrpcpb.RaftDone) {
    }
}
